--- a/src/Containers/RightPane/rightPane.css
+++ b/src/Containers/RightPane/rightPane.css
@@ -4,4 +4,6 @@
     border-radius: 30px;
     box-shadow: 10px 20px 20px rgba(0,0,0,0.3);
     background-color: #f5f7ffff;
+    overflow-y: scroll;
+    padding-bottom: 60px;
 }
