--- a/src/Components/ApproveCard/approveCard.css
+++ b/src/Components/ApproveCard/approveCard.css
@@ -1,4 +1,4 @@
-.delete-box {
+.approve-box {
     width: 100%;
     height: 100vh;
     background-color: rgba(0, 0, 0, 0.6);
@@ -10,7 +10,7 @@
     justify-content: center;
     align-items: center;
   }
-  .delete-card {
+  .approve-card {
     width: 450px;
     border-radius: 20px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
@@ -19,17 +19,17 @@
     color: #333;
     letter-spacing: -0.5px;
   }
-  .delete-content {
+  .approve-content {
     width: 100%;
-    background-color: rgb(248, 234, 231);
-    color: rgb(194, 63, 56);
+    background-color: #d2ebed;
+    color: #22a6b3;
     font-size: 15px;
     font-weight: 600;
     text-align: center;
     padding: 15px;
     margin-top: 20px;
   }
-  .delete-content img {
+  .approve-content img {
     width: 30px;
   }
   .dl-action-box {
@@ -49,13 +49,13 @@
     padding: 10px;
     border-radius: 10px;
   }
-  .btn-delete {
+  .btn-approve {
     border: none;
-    background-color: #d32f2f;
+    background-color: #22a6b3;
     padding: 10px 20px;
     color: #fff;
     border-radius: 10px;
   }
-  .btn-delete:hover {
-    background-color: #ba2929;
+  .btn-approve:hover {
+    background-color: #22a6b3;
   }
